[gd_scene load_steps=16 format=2]

[ext_resource path="res://World/grass_2.1.png" type="Texture" id=1]
[ext_resource path="res://World/grass_2.png" type="Texture" id=2]
[ext_resource path="res://World/Brush.gd" type="Script" id=3]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.1084, 13.5665 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 84, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 84, 84, 84 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 84, 84, 84, 84 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 168, 84, 84, 84 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 252, 84, 84, 84 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 14.9842
height = 14.4035

[node name="Brush" type="Area2D"]
scale = Vector2( 0.6, 0.5 )
collision_layer = 128
collision_mask = 128
script = ExtResource( 3 )

[node name="Grown" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.52507, 13.3165 )
shape = SubResource( 1 )

[node name="Growing" type="AnimatedSprite" parent="."]
position = Vector2( -4.16769, -15.204 )
frames = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.537845, 2.94646 )
shape = SubResource( 11 )

[connection signal="body_entered" from="." to="." method="_on_Bush_body_entered"]
[connection signal="animation_finished" from="Growing" to="." method="_on_Growing_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
